Fix for jacoco report not creating issue (#107)